# bsod2

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
sample/: .gitignore  emagram.ipynb  sample.md  trajectory.ipynb  vertical_csec.ipynb  z_vs_var.ipynb
sample/Seisuimaru2407/: field_book.csv
sample/Seisuimaru2407/raw_data/: F2024061806S1101771.CSV  F2024061808S1101323.CSV  F2024061809S1101386.CSV  F2024061810S1101322.CSV  F2024061811S1101327.CSV  F2024061812S1101772.CSV  F2024061813S1101388.CSV  F2024061814S1101326.CSV
src/bsod2/: __init__.py  qc.py  sonde.py  sondeset.py
