[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bsod2"
version = "0.2.0"
description = "package for reading radiosonde data"
authors = [{name = "So Tomita"}]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "numpy==2.4.3",
    "pandas==3.0.2",
    "metpy==1.7.1",
    "tqdm == 4.67.3",
    "xarray == 2026.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]