[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bsod2"
version = "0.3.0"
description = "package for reading radiosonde data"
authors = [{name = "So Tomita"}]
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["meteorology", "weather", "radiosonde"]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.23.5",
    "pandas>=2.0.0",
    "metpy>=1.7.1",
    "tqdm>=4.65.1",
    "xarray>=2023.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]